fixed some templates and aligned some headers

--- a/static/css/document.css
+++ b/static/css/document.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: flex-end;
 }
 
